--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,3 +24,17 @@
     border-left-style: solid;
     border-left-width: 1px;
 }
+.product-listed-date {
+	color: gray;
+    font-size: 11px;
+    line-height: 22px;
+    margin-right: 2px;
+}
+.product-name-link {
+	font-size: 13px;
+    font-family: "Times New Roman",Times,serif;
+}
+.product-description {
+	font-size: 11px;
+	font-family: "Times New Roman",Times,serif;
+}
